Bug 1287384 - Fix icon and progress bar alignment in the Downloads Panel. r=jaws
MozReview-Commit-ID: 1Im2tA3CLr2

UltraBlame original commit: 8cc027a0b80d20bfb271e906638e0cf140f3ba01

--- a/browser/components/downloads/content/downloads.css
+++ b/browser/components/downloads/content/downloads.css
@@ -13,18 +13,13 @@ richlistitem[type="download"]:not([selected]) button {
   -moz-user-focus: none;
 }
 
-.downloadsHideDropmarker > #downloadsFooterButtonsSplitter,
-.downloadsHideDropmarker > #downloadsFooterDropmarker {
-  display: none;
-}
-
 richlistitem[type="download"].download-state[state="1"]:not([exists]) .downloadShow {
   display: none;
 }
 
 #downloadsSummary:not([inprogress]) > vbox > #downloadsSummaryProgress,
 #downloadsSummary:not([inprogress]) > vbox > #downloadsSummaryDetails,
-#downloadsFooter[showingsummary] > #downloadsFooterButtons,
+#downloadsFooter[showingsummary] > #downloadsHistory,
 #downloadsFooter:not([showingsummary]) > #downloadsSummary {
   display: none;
 }
@@ -61,7 +56,7 @@ richlistitem.download button {
 .download-state:not(:-moz-any([state="6"], 
                               [state="8"], 
                               [state="9"]) )
-                                           .downloadTypeIcon.blockedIcon,
+                                           .downloadBlockedBadge,
 
 .download-state:not(:-moz-any([state="-1"],
                               [state="5"], 
